--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./style.css">
   <title>Rashid Altayeb | Product preview card component</title>
 </head>
 <body>
@@ -13,19 +13,22 @@
     <div class="card content">
       <div class="sub-title">PERFUME</div>
       <div class="main-title">
-        <h2>Gabrielle Essence Eau De Parfum</h2>
+        <h1>Gabrielle Essence Eau De Parfum</h1>
       </div>
-      <div class="card-paragraph">
-          A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
+      <div class="paragraph">
+        A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+        Perfumer-Creator for the House of CHANEL.
       </div>
       <div class="price-container">
         <div class="price">$149.99</div>
-      <div class="discount">$169.99</div>
+        <div class="discount">$169.99</div>
       </div>
-        <a href="#" class="btn-link">
+      <div>
+          <a href="#" class="btn-link">
             <img src="./images/icon-cart.svg" alt="">&nbsp;&nbsp;&nbsp;
-          <button>Add to Cart</button>
-        </a>
+            <button>Add to Cart</button>
+          </a>
+        </div>
     </div>
   </div>
 </body>
